# hw-dss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hw-01/: CMakeLists.txt  main.cpp  plot_drawer.cpp  readme.md
hw-01/data/: linux_memcpy_big  linux_memcpy_small  linux_murmur_x64_128_big  linux_murmur_x64_128_small  linux_xxhash_128_big  linux_xxhash_128_small
hw-01/dependencies/smhasher/src/: SpeedTest.cpp
hw-02/: CMakeLists.txt  diagram_drawer.cpp  main.cpp
hw-02/artifacts/: lz41  lz47  zstd1  zstd7
